--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-i18n="title">كيان الخليج | الصفحة الرئيسية</title>
   
   <!-- Meta Tags for SEO -->
@@ -17,8 +17,8 @@
   <meta property="og:title" content="كيان الخليج للصناعة | الصفحة الرئيسية">
   <meta property="og:description" content="متخصصون في تصنيع وتركيب الكرتن وول والكلادينج والنوافذ والأبواب الألمنيوم في المملكة العربية السعودية">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://kayanfactory.netlify.app/">
-  <meta property="og:image" content="https://kayanfactory.netlify.app/smart-aluminium-windows-1024x683-1-1000x570.png">
+  <meta property="og:url" content="https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/">
+  <meta property="og:image" content="https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/smart-aluminium-windows-1024x683-1-1000x570.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:site_name" content="كيان الخليج للصناعة">
@@ -28,7 +28,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="كيان الخليج للصناعة | الصفحة الرئيسية">
   <meta name="twitter:description" content="متخصصون في تصنيع وتركيب الكرتن وول والكلادينج والنوافذ والأبواب الألمنيوم في المملكة العربية السعودية">
-  <meta name="twitter:image" content="https://kayanfactory.netlify.app/smart-aluminium-windows-1024x683-1-1000x570.png">
+  <meta name="twitter:image" content="https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/smart-aluminium-windows-1024x683-1-1000x570.png">
   
   <!-- Additional Meta Tags -->
   <meta name="theme-color" content="#0d47a1">
@@ -42,12 +42,12 @@
   <link rel="manifest" href="manifest.json">
   
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://kayanfactory.netlify.app/">
+  <link rel="canonical" href="https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/">
   
   <!-- Alternate Languages -->
-  <link rel="alternate" hreflang="ar" href="https://kayanfactory.netlify.app/">
-  <link rel="alternate" hreflang="en" href="https://kayanfactory.netlify.app/?lang=en">
-  <link rel="alternate" hreflang="x-default" href="https://kayanfactory.netlify.app/">
+  <link rel="alternate" hreflang="ar" href="https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/">
+  <link rel="alternate" hreflang="en" href="https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/?lang=en">
+  <link rel="alternate" hreflang="x-default" href="https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/">
   <link rel="icon" href="window_icon_125687.svg" type="image/svg+xml">
   
   <!-- Structured Data -->
@@ -57,8 +57,8 @@
     "@type": "Organization",
     "name": "كيان الخليج للصناعة",
     "alternateName": "Kayan Alkhalij Manufacturing",
-    "url": "https://kayanfactory.netlify.app",
-    "logo": "https://kayanfactory.netlify.app/WhatsApp%20Image%202025-07-08%20at%2017.49.46_02d7f189_1753025271754.jpg",
+  "url": "https://kayanalkhalij1.github.io/Kayan-Al-Khalij11",
+  "logo": "https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/WhatsApp%20Image%202025-07-08%20at%2017.49.46_02d7f189_1753025271754.jpg",
     "description": "متخصصون في تصنيع وتركيب الكرتن وول والكلادينج والنوافذ والأبواب الألمنيوم في المملكة العربية السعودية",
     "address": {
       "@type": "PostalAddress",
@@ -143,6 +143,11 @@
 
 </head>
 <body lang="ar">
+  <div class="scroll-progress" aria-hidden="true">
+    <div class="scroll-progress__track">
+      <div class="scroll-progress__bar" id="scroll-progress-bar"></div>
+    </div>
+  </div>
   <!-- Top Bar -->
   <div class="top-bar">
     <div class="container">
@@ -227,61 +232,19 @@
     </div>
   </header>
   
-  <!-- Enhanced Hero -->
-  <section class="hero hero-legendary">
-    <div class="hero-bg">
-      <img src="WhatsApp Image 2025-07-31 at 12.35.10_3ca7ce88.jpg" alt="خلفية كيان الخليج" class="hero-bg-img" loading="eager" decoding="async" width="1920" height="900">
-      <div class="hero-overlay"></div>
-    </div>
-    <div class="hero-content" data-aos="fade-up">
-      <div class="hero-badge glass-effect" data-aos="fade-up" data-aos-delay="100">
-        <i class="fa fa-award"></i>
-        <span>شركة معتمدة ومرخصة</span>
+  <!-- Intro Banner (clean and light) -->
+  <section class="intro-banner">
+    <div class="container intro-content">
+  <h1 class="intro-title" data-typing data-typing-speed="60">كيان الخليج للصناعة</h1>
+      <p class="intro-subtitle">حلول هندسية محترفة في الكرتن وول، الكلادينج، والنوافذ والأبواب</p>
+      <div class="intro-actions">
+  <a href="products.html" class="btn btn-primary ripple-container">تصفح المنتجات</a>
+  <a href="projects.html" class="btn btn-secondary ripple-container">مشاريعنا</a>
+  <a href="contact.html" class="btn btn-primary ripple-container">اتصل بنا</a>
       </div>
-      <h1 data-aos="fade-up" data-aos-delay="200">
-        <span class="hero-title-main text-glow">كيان الخليج للصناعة</span>
-        <span class="hero-title-sub">رؤية هندسية متطورة</span>
-      </h1>
-      <p class="hero-description" data-aos="fade-up" data-aos-delay="300">
-        نحن متخصصون في تصنيع وتركيب الكرتن وول والكلادينج والنوافذ والأبواب الألمنيوم بأعلى معايير الجودة العالمية
-      </p>
-      <div class="hero-stats" data-aos="fade-up" data-aos-delay="400">
-        <div class="stat-item glass-effect">
-          <span class="stat-number">15+</span>
-          <span class="stat-label">سنة خبرة</span>
-        </div>
-        <div class="stat-item glass-effect">
-          <span class="stat-number">500+</span>
-          <span class="stat-label">مشروع مكتمل</span>
-        </div>
-        <div class="stat-item glass-effect">
-          <span class="stat-number">100%</span>
-          <span class="stat-label">رضا العملاء</span>
-        </div>
-      </div>
-      <div class="hero-buttons" data-aos="fade-up" data-aos-delay="500">
-        <a href="products.html" class="btn btn-legendary">
-          <i class="fa fa-box"></i> 
-          <span>تصفح منتجاتنا</span>
-        </a>
-        <a href="contact.html" class="btn btn-legendary">
-          <i class="fa fa-phone"></i> 
-          <span>اتصل بنا</span>
-        </a>
-        <a href="projects.html" class="btn btn-legendary">
-          <i class="fa fa-images"></i> 
-          <span>شاهد أعمالنا</span>
-        </a>
-      </div>
-    </div>
-    <div class="hero-scroll-indicator floating" data-aos="fade-up" data-aos-delay="600">
-      <div class="scroll-arrow">
-        <i class="fa fa-chevron-down"></i>
-      </div>
-      <span>اكتشف المزيد</span>
     </div>
   </section>
-    <!-- Start: Product Quick Cards -->
+  <!-- Start: Product Quick Cards -->
     <div class="product-quick-cards container" style="margin-top: 1.5rem;">
       <div class="product-cards-grid" style="display: flex; gap: 1.5rem; justify-content: center; align-items: stretch;">
         <a href="projects-aluminum-glass.html" class="product-card card-legendary legendary-hover"
@@ -327,12 +290,6 @@
       </div>
     </div>
     <!-- End: Product Quick Cards -->
-    <div class="floating-elements">
-      <div class="floating-element floating"><i class="fa-solid fa-building"></i></div>
-      <div class="floating-element floating"><i class="fa-solid fa-cog"></i></div>
-      <div class="floating-element floating"><i class="fa-solid fa-tools"></i></div>
-    </div>
-  </section>
   <!-- Stats -->
   <section class="stats-section stats-legendary">
     <div class="container">
