--- a/comments.html
+++ b/comments.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-i18n="comments_title">آراء العملاء | كيان الخليج</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800;900&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="canonical" href="https://kayanfactory.netlify.app/comments.html">
-  <link rel="alternate" hreflang="ar" href="https://kayanfactory.netlify.app/comments.html">
-  <link rel="alternate" hreflang="en" href="https://kayanfactory.netlify.app/comments.html?lang=en">
+  <link rel="canonical" href="https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/comments.html">
+  <link rel="alternate" hreflang="ar" href="https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/comments.html">
+  <link rel="alternate" hreflang="en" href="https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/comments.html?lang=en">
   <link rel="icon" href="window_icon_125687.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
