--- a/projects-upvc-windows.html
+++ b/projects-upvc-windows.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>مشاريع نوافذ وأبواب UPVC | كيان الخليج</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://kayanfactory.netlify.app/projects-upvc-windows.html">
-    <link rel="alternate" hreflang="ar" href="https://kayanfactory.netlify.app/projects-upvc-windows.html">
-    <link rel="alternate" hreflang="en" href="https://kayanfactory.netlify.app/projects-upvc-windows.html?lang=en">
+    <link rel="canonical" href="https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/projects-upvc-windows.html">
+    <link rel="alternate" hreflang="ar" href="https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/projects-upvc-windows.html">
+    <link rel="alternate" hreflang="en" href="https://kayanalkhalij1.github.io/Kayan-Al-Khalij11/projects-upvc-windows.html?lang=en">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800;900&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="window_icon_125687.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
